--- a/Actividad - Clase 10/subscription.css
+++ b/Actividad - Clase 10/subscription.css
@@ -63,6 +63,38 @@ button {
   font-weight: bold;
   margin-top: 20px;
 }
+/* Modal Success */
+#modal-succes {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+#modal-succes .modal-content {
+  background-color: #fff;
+  color: #081521;
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 500px;
+  position: relative;
+  box-shadow: 0 0 10px #0000004d;
+}
+
+#modal-succes .close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+}
 
 @media (max-width: 720px) {
   .form-group.half {
